// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given the API successfully loads the instrument mode matches Snapshot for the view Instrument Settings page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="panel panel--info panel--no-title  u-mt-m"
      >
        <div
          class="panel__body "
        >
          <div
            style="text-align: center;"
          >
            <div
              aria-busy="true"
              class=""
            >
              <svg
                aria-label="audio-loading"
                height="30"
                viewBox="0 0 38 38"
                width="30"
                xmlns="http://www.w3.org/2000/svg"
              >
                <defs>
                  <lineargradient
                    id="a"
                    x1="8.042%"
                    x2="65.682%"
                    y1="0%"
                    y2="23.865%"
                  >
                    <stop
                      offset="0%"
                      stop-color="#064868"
                      stop-opacity="0"
                    />
                    <stop
                      offset="63.146%"
                      stop-color="#064868"
                      stop-opacity=".631"
                    />
                    <stop
                      offset="100%"
                      stop-color="#064868"
                    />
                  </lineargradient>
                </defs>
                <g
                  fill="none"
                  fill-rule="evenodd"
                >
                  <g
                    transform="translate(1 1)"
                  >
                    <path
                      d="M36 18c0-9.94-8.06-18-18-18"
                      id="Oval-2"
                      stroke="#064868"
                      stroke-width="2"
                    >
                      <animatetransform
                        attributeName="transform"
                        dur="0.9s"
                        from="0 18 18"
                        repeatCount="indefinite"
                        to="360 18 18"
                        type="rotate"
                      />
                    </path>
                    <circle
                      cx="36"
                      cy="18"
                      fill="#fff"
                      r="1"
                    >
                      <animatetransform
                        attributeName="transform"
                        dur="0.9s"
                        from="0 18 18"
                        repeatCount="indefinite"
                        to="360 18 18"
                        type="rotate"
                      />
                    </circle>
                  </g>
                </g>
              </svg>
            </div>
            Getting questionnaire settings
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="panel panel--info panel--no-title  u-mt-m"
    >
      <div
        class="panel__body "
      >
        <div
          style="text-align: center;"
        >
          <div
            aria-busy="true"
            class=""
          >
            <svg
              aria-label="audio-loading"
              height="30"
              viewBox="0 0 38 38"
              width="30"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <lineargradient
                  id="a"
                  x1="8.042%"
                  x2="65.682%"
                  y1="0%"
                  y2="23.865%"
                >
                  <stop
                    offset="0%"
                    stop-color="#064868"
                    stop-opacity="0"
                  />
                  <stop
                    offset="63.146%"
                    stop-color="#064868"
                    stop-opacity=".631"
                  />
                  <stop
                    offset="100%"
                    stop-color="#064868"
                  />
                </lineargradient>
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
              >
                <g
                  transform="translate(1 1)"
                >
                  <path
                    d="M36 18c0-9.94-8.06-18-18-18"
                    id="Oval-2"
                    stroke="#064868"
                    stroke-width="2"
                  >
                    <animatetransform
                      attributeName="transform"
                      dur="0.9s"
                      from="0 18 18"
                      repeatCount="indefinite"
                      to="360 18 18"
                      type="rotate"
                    />
                  </path>
                  <circle
                    cx="36"
                    cy="18"
                    fill="#fff"
                    r="1"
                  >
                    <animatetransform
                      attributeName="transform"
                      dur="0.9s"
                      from="0 18 18"
                      repeatCount="indefinite"
                      to="360 18 18"
                      type="rotate"
                    />
                  </circle>
                </g>
              </g>
            </svg>
          </div>
          Getting questionnaire settings
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given the API successfully loads the instrument settings matches Snapshot for the view Instrument Settings page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="summary"
      >
        <div
          class="summary__group"
        >
          <h2>
            Questionnaire settings
          </h2>
          <table
            class="summary__items u-mt-s"
            id="report-table"
          >
            <tbody
              class="summary__item "
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    Type
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  StrictInterviewing
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item "
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    SaveSessionOnTimeout
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  True
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item "
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    SaveSessionOnQuit
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  True
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item "
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    DeleteSessionOnTimeout
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  True
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item "
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    DeleteSessionOnQuit
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  True
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item "
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    SessionTimeout
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  15
                </td>
              </tr>
            </tbody>
            <tbody
              class="summary__item "
            >
              <tr
                class="summary__row summary__row--has-values"
              >
                <td
                  class="summary__item-title"
                >
                  <div
                    class="summary__item--text"
                  >
                    ApplyRecordLocking
                  </div>
                </td>
                <td
                  class="summary__values"
                  colspan="2"
                >
                  True
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="summary"
    >
      <div
        class="summary__group"
      >
        <h2>
          Questionnaire settings
        </h2>
        <table
          class="summary__items u-mt-s"
          id="report-table"
        >
          <tbody
            class="summary__item "
          >
            <tr
              class="summary__row summary__row--has-values"
            >
              <td
                class="summary__item-title"
              >
                <div
                  class="summary__item--text"
                >
                  Type
                </div>
              </td>
              <td
                class="summary__values"
                colspan="2"
              >
                StrictInterviewing
              </td>
            </tr>
          </tbody>
          <tbody
            class="summary__item "
          >
            <tr
              class="summary__row summary__row--has-values"
            >
              <td
                class="summary__item-title"
              >
                <div
                  class="summary__item--text"
                >
                  SaveSessionOnTimeout
                </div>
              </td>
              <td
                class="summary__values"
                colspan="2"
              >
                True
              </td>
            </tr>
          </tbody>
          <tbody
            class="summary__item "
          >
            <tr
              class="summary__row summary__row--has-values"
            >
              <td
                class="summary__item-title"
              >
                <div
                  class="summary__item--text"
                >
                  SaveSessionOnQuit
                </div>
              </td>
              <td
                class="summary__values"
                colspan="2"
              >
                True
              </td>
            </tr>
          </tbody>
          <tbody
            class="summary__item "
          >
            <tr
              class="summary__row summary__row--has-values"
            >
              <td
                class="summary__item-title"
              >
                <div
                  class="summary__item--text"
                >
                  DeleteSessionOnTimeout
                </div>
              </td>
              <td
                class="summary__values"
                colspan="2"
              >
                True
              </td>
            </tr>
          </tbody>
          <tbody
            class="summary__item "
          >
            <tr
              class="summary__row summary__row--has-values"
            >
              <td
                class="summary__item-title"
              >
                <div
                  class="summary__item--text"
                >
                  DeleteSessionOnQuit
                </div>
              </td>
              <td
                class="summary__values"
                colspan="2"
              >
                True
              </td>
            </tr>
          </tbody>
          <tbody
            class="summary__item "
          >
            <tr
              class="summary__row summary__row--has-values"
            >
              <td
                class="summary__item-title"
              >
                <div
                  class="summary__item--text"
                >
                  SessionTimeout
                </div>
              </td>
              <td
                class="summary__values"
                colspan="2"
              >
                15
              </td>
            </tr>
          </tbody>
          <tbody
            class="summary__item "
          >
            <tr
              class="summary__row summary__row--has-values"
            >
              <td
                class="summary__item-title"
              >
                <div
                  class="summary__item--text"
                >
                  ApplyRecordLocking
                </div>
              </td>
              <td
                class="summary__values"
                colspan="2"
              >
                True
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
